# djforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
djforge/: __init__.py  cli.py  config.py  renderer.py
djforge/tui/: prompts.py
tests/: conftest.py  test_core.py  test_e2e.py
