[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djforge"
version = "0.1.0"
description = "The fast, modern Django project generator. Zero config, sensible defaults."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "djforge contributors" }]
keywords = ["django", "scaffold", "boilerplate", "cli", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "black",
    "ruff",
    "isort",
    "hatch",
]

[project.scripts]
djforge = "djforge.cli:main"

[project.urls]
Homepage    = "https://github.com/siyadhkc/djforge"
Repository  = "https://github.com/siyadhkc/djforge"
Issues      = "https://github.com/siyadhkc/djforge/issues"
Changelog   = "https://github.com/siyadhkc/djforge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["djforge"]

[tool.hatch.build.targets.sdist]
include = ["djforge/**", "tests/**", "README.md", "LICENSE"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["djforge"]
